# porch

./: .flake8  .gitignore  README.md  README.rst  SECURITY_FIXES.md  pyproject.toml  requirements.txt  setup.py  test_quick_verify.py
.github/workflows/: python-test.yml
experiments/: 1d_diffusion.py  burgers.py  diffusion.py  diffusion_exact_bc.py  diffusion_inverse.py  heat_measurement.py  tmp_plot_heat_measurement.py
experiments/mor_pinn/: 1d_wave_eq_rom.py  1d_wave_eq_rom_extrapolation.py  hparam_opt_explicit.py  hparam_opt_mor_pinn.py  hparam_opt_pinn.py  paper_run_rom_experiments.py  pinn_only.py  pinn_only_study.py  plot_paper_experiment_overview.py  plot_paper_pinn_only.py  plot_paper_rom.py  plot_paper_summary.py  wave_eq_explicit_data.py  wave_eq_pinn_only.py  wave_eq_rom.py  wave_eq_rom_error_sensitive.py  wave_eq_rom_extrapolation.py  wave_eq_rom_parametric.py  wave_eq_simnet.py  wave_equation_base_model.py  wave_mor_data_generation.py  wave_mor_data_parametric.py  wave_mor_utils.py
porch/: __init__.py  boundary_conditions.py  config.py  dataset.py  geometry.py  model.py  network.py  tensorboard_util.py  training.py  util.py
tests/: test_bc.py  test_config.py  test_dataset.py  test_diffusion.py  test_geometry.py  test_gradient.py  test_network.py
