[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[pytest]
testpaths = "testing"
addopts = "-rf --import-mode=importlib"

[tool.setuptools]
packages = ["porch"]

[project]
name = "porch"
version="0.1.4"
authors=[{name = "Raphael Leiteritz", email = "raphael.leiteritz@ipvs.uni-stuttgart.d"}]
description = "A PyTorch Library for Scientific Machine Learning"
readme = "README.rst"
# packages=["porch"]
requires-python = ">=3.7"
keywords = ["porch",
        "pytorch",
        "torch",
        "machine learning",
        "physics-based",
        "physics-informed",
        "neural network"
        ]
urls = {Homepage = "https://github.com/leiterrl/porch"}
license = {text = "Mozilla Public License 2.0"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development",
]
dependencies = [
    "numpy", "tqdm"
]

# [project.urls]
# "Homepage" = "https://github.com/leiterrl/porch"